# men_ob

./: .Rhistory  .gitignore  README.md  memoria_tecnica.md  pyproject.toml
diagnosticos/: cnes_meningite_diagnostico.txt  cnes_meningite_diagnostico_amostra.csv  cnes_meningite_spatial_amostra.csv  cnes_meningite_spatial_conservador_amostra.csv  cnes_meningite_spatial_conservador_resumo.txt  cnes_meningite_spatial_diagnostico.txt  cnes_meningite_spatial_validacao_amostra.csv  cnes_meningite_spatial_validacao_resumo.txt  cnes_meningite_spatial_validacao_top_coordenadas.csv  cnes_meningite_spatial_validacao_top_distancias.csv  scan_cnes_endereco_detalhe.txt  scan_cnes_endereco_resumo.csv
lookup_tables/: cnes_meningite_lookup.parquet  cnes_meningite_raw.parquet  cnes_meningite_spatial.parquet  cnes_meningite_spatial_conservador.parquet  ibge_municipios_espacial.parquet
metadados/: dicionario_v5_mapeado.json  sinan_meningite_metadata.yaml
src/: carregar_metadata.py  espacializar_cnes_meningite.py  extrator_sinan.py  gerar_dataset_meningite_spatial.py  gerar_lookup_cnes_meningite.py  gerar_lookup_ibge_municipios.py  reconstruir_cnes_meningite_spatial_conservador.py  validar_cobertura_espacial_municipios.py  validar_metadata.py
src/diagnostico/: diagnosticar_cnes_meningite_raw.py  gerar_lookup_cnes_minimo.py  inspecionar_cnes_st_dbc.py  inspecionar_lookup_ibge.py  scan_ftp_cnes_endereco.py  validar_cnes_meningite_spatial.py  validar_lookup_cnes_minimo.py
src/legacy/: extrator_dic_v5.py
